fix(): align goal numbers

--- a/bricks/ai-portal/src/goal-card-list/CardItem/CardItem.shadow.css
+++ b/bricks/ai-portal/src/goal-card-list/CardItem/CardItem.shadow.css
@@ -10,7 +10,8 @@
   user-select: none;
   border: 1px solid transparent;
 
-  &:hover {
+  &:hover,
+  &:has(.title:focus) {
     background-color: rgba(0, 0, 0, 0.05);
 
     .end {
@@ -87,6 +88,7 @@
     font-weight: 400;
     color: var(--palette-gray-7);
     font-size: 16px;
+    overflow: visible;
   }
 
   .title {
